Fix components still visible when left bar is closed

--- a/App/public/css/Common.css
+++ b/App/public/css/Common.css
@@ -154,7 +154,7 @@ p, h1, h2, h3, h4, h5, h6 {
 }
 
 .sidebar.left.closed .hideWhenClosed {
-  display: none;
+  display: none !important;
 }
 
 .sidebar.left > .button {
